--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clustergrammer",
-  "version": "v1.19.15",
+  "version": "v1.19.17",
   "description": "This is a clustergram implemented in D3.js. I started from the example http://bost.ocks.org/mike/miserables/ and added the following features",
   "main": "clustergrammer.node.js",
   "scripts": {
@@ -34,7 +34,6 @@
   "dependencies": {
     "d3": "^3.5.15",
     "jquery": "1.11.0",
-    "mathjs": "3.17.0",
-    "underscore": "1.8.3"
+    "mathjs": "3.17.0"
   }
 }
