--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "rollup": "^3.7.4",
-    "rollup-plugin-import-css": "^3.1.0"
+    "rollup-plugin-embed-css": "^1.0.25",
+    "rollup-plugin-import-css": "^3.1.0",
+    "rollup-plugin-visualizer": "^5.8.3"
   },
   "dependencies": {
     "d3": "^3.5.15",
