--- a/package.json
+++ b/package.json
@@ -6,23 +6,19 @@
   "browser": "dist/clustergrammer-lite.umd.js",
   "description": "This is a clustergram implemented in D3.js. I started from the example http://bost.ocks.org/mike/miserables/ and added the following features",
   "scripts": {
-    "build": "rollup --config",
-    "dev": "rollup -c -w",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "pre-commit": "lint-staged --allow-empty",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nicolas Fernandez",
   "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^23.0.5",
-    "@rollup/plugin-node-resolve": "^15.0.1",
     "husky": "^7.0.4",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "rollup": "^3.7.4",
-    "rollup-plugin-embed-css": "^1.0.25",
-    "rollup-plugin-import-css": "^3.1.0",
-    "rollup-plugin-visualizer": "^5.8.3"
+    "vite": "^4.0.2"
   },
   "dependencies": {
     "d3": "^3.5.15",
