--- a/.prettierignore
+++ b/.prettierignore
@@ -1,8 +1,3 @@
 clustergrammer.js
-clustergrammer.js.map
 clustergrammer.min.js
-clustergrammer.min.js.map
-clustergrammer.node.js
-clustergrammer.node.js.map
-clustergrammer.node.min.js
-clustergrammer.node.min.js.map
+clustergrammer.cjs.js
