--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "css-loader": "^0.23.1",
     "eslint": "^2.1.0",
     "expose-loader": "^0.7.1",
-    "less-loader": "^2.2.3",
-    "object-assign": "^4.1.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.2",
     "husky": "^7.0.4",
+    "less-loader": "^2.2.3",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1"
+    "object-assign": "^4.1.0",
+    "prettier": "^2.7.1",
+    "style-loader": "^0.13.1",
+    "webpack": "^3.12.0"
   },
   "dependencies": {
     "d3": "^3.5.15",
