--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clustergrammer",
-  "version": "3.0.7",
+  "version": "3.0.8",
   "description": "This is a clustergram implemented in D3.js. I started from the example http://bost.ocks.org/mike/miserables/ and added the following features",
   "main": "clustergrammer.cjs.js",
   "scripts": {
@@ -20,9 +20,9 @@
   },
   "homepage": "https://github.com/MaayanLab/clustergrammer#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-es2015": "^6.14.0",
+    "babel-loader": "^8.3.0",
     "browser-sync": "^2.27.11",
     "browser-sync-webpack-plugin": "^2.3.0",
     "husky": "^7.0.4",
