--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "clustergrammer",
-  "version": "3.0.17",
+  "version": "3.0.18",
   "description": "This is a clustergram implemented in D3.js. I started from the example http://bost.ocks.org/mike/miserables/ and added the following features",
-  "main": "clustergrammer.cjs.js",
+  "main": "src/main.js",
   "scripts": {
     "build": "webpack",
     "stats": "webpack --json > stats.json",
