--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is a clustergram implemented in D3.js. I started from the example http://bost.ocks.org/mike/miserables/ and added the following features",
   "main": "clustergrammer.cjs.js",
   "scripts": {
+    "dev": "parcel example/index.html",
     "build": "webpack",
     "stats": "webpack --json > stats.json",
     "pre-commit": "lint-staged --allow-empty",
@@ -28,6 +29,7 @@
     "husky": "^7.0.4",
     "lint-staged": "^13.0.3",
     "object-assign": "^4.1.0",
+    "parcel": "^2.8.2",
     "prettier": "^2.7.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.10.0"
